--- a/packages/widget-core-sdk/package.json
+++ b/packages/widget-core-sdk/package.json
@@ -40,7 +40,7 @@
     "eslint": "^8.30.0",
     "husky": "2.7.0",
     "jest": "26.4.1",
-    "lint-staged": "8.1.5",
+    "lint-staged": "^15.2.2",
     "prettier": "1.17.0",
     "regenerator-runtime": "0.13.2",
     "rimraf": "2.6.2",
