--- a/packages/helpdesk-sdk/package.json
+++ b/packages/helpdesk-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@livechat/helpdesk-sdk",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "SDK for extending HelpDesk App",
   "license": "MIT",
   "repository": {
@@ -26,7 +26,7 @@
     "@babel/runtime": "^7.2.0",
     "@livechat/mitt": "0.1.2",
     "@livechat/postmessage": "0.3.2",
-    "@livechat/widget-core-sdk": "^1.2.1"
+    "@livechat/widget-core-sdk": "^1.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -34,24 +34,24 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "26.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "core-js": "3.0.1",
     "eslint": "^8.30.0",
     "husky": "2.7.0",
-    "jest": "26.4.1",
+    "jest": "^30.1.3",
     "lint-staged": "^15.2.2",
     "prettier": "1.17.0",
     "regenerator-runtime": "0.13.2",
     "rimraf": "2.6.2",
-    "rollup": "1.10.1",
-    "rollup-plugin-babel": "=4.3.0",
+    "rollup": "^4.50.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-node-resolve": "4.2.3",
     "rollup-plugin-replace": "2.1.0",
-    "rollup-plugin-typescript2": "0.21.0",
-    "rollup-plugin-uglify": "6.0.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "3.4.5"
   },
   "prettier": {
